--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "@forzoom/security-text",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "dist/security-text.min.js",
+  "module": "dist/security-text.esm.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "node build/build.js"
@@ -23,5 +24,6 @@
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-uglify": "^6.0.4"
-  }
+  },
+  "types": "./types/index.d.ts"
 }
